# Graph-SND

./: .gitignore  README.md  SUPPLEMENT_MANIFEST.md  SUPPLEMENT_README.md  pyproject.toml  requirements.txt
ControllingBehavioralDiversity-fork/: DIAGNOSIS.md  GRAPH_SND_CHANGES.md  LICENSE
ControllingBehavioralDiversity-fork/het_control/: callback.py  graph_snd.py  run.py
ControllingBehavioralDiversity-fork/scripts/: copy_n250_from_riddle_to_mac.sh  launch_all_expander.sh  launch_bern_dico.sh  launch_bern_dico_seeds.sh  launch_dico_n50_feasibility.sh  launch_expander_dico.sh  launch_expander_dico_seeds.sh  launch_knn_dico.sh  (+11 more)
Paper/: checklist.tex  main.tex  references.bib
checkpoints/: n16_meta.json  n4_meta.json  n8_meta.json
docs/: posthoc_full_snd_validation.md
experiments/: dico_expander_move1_summary.py  discrete_tvd_sanity.py  exp1_metric_comparison.py  exp1_plots.py  exp2_timing_scaling.py  exp3_expander_distortion.py  exp3_plots.py  mpe_ippo_training.py  mpe_measurement_panel.py  n50_bern_vs_full_comparison.py  n50_posthoc_full_snd_validation.py  n50_setpoint_sweep_plots.py  plot_scaling.py  plot_timing_n500.py
graphsnd/: __init__.py  batched_policies.py  graphs.py  metrics.py  policies.py  rollouts.py  tvd.py  wasserstein.py
scripts/: build_neurips_supplement.py  launch_mpe_move2.sh  plot_oom_bar_chart.py  plot_reward_curves.py  preflight.sh  profile_oom_barrier.py  run_n500_timing.sh  run_oom_profiler.sh  run_overnight_n100.sh  run_overnight_n50.sh
tests/: test_batched_policies.py  test_graphs.py  test_metrics.py  test_wasserstein.py
training/: train_navigation.py  train_navigation_batched.py
(+72 files in other folders)
